# pi-dev

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
.pi/: guardrails.yaml  settings.json
.pi/agents/: coder.md  critic.md  reviewer.md
.pi/extensions/damage-control/: match.ts  rules.ts
.pi/extensions/guardrails/: evaluate.test.ts  rules.test.ts
container/: entrypoint.sh  init-firewall.sh
docs/: vm-setup.md
evals/python/: .gitignore  README.md  run.sh
evals/python/fixture/: AGENTS.md  pyproject.toml
evals/python/fixture/src/tasks/: cli.py  constants.py  search.py  storage.py  types.py
evals/python/fixture/tests/: test_storage.py
extensions/: web.ts
extensions/guardrails/: adapter.ts  constants.ts  evaluate.ts  feedback.test.ts  feedback.ts  index.ts  match.test.ts  match.ts  rules.ts
extensions/subagents/: argv.test.ts  argv.ts  constants.ts  dashboard.test.ts  dashboard.ts  events.test.ts  events.ts  format.test.ts  format.ts  grid.test.ts  grid.ts  index.test.ts  index.ts  log.test.ts  log.ts  orphans.test.ts  orphans.ts  paths.ts  personas.test.ts  personas.ts  queue.test.ts  queue.ts  refresh.test.ts  refresh.ts  registry.test.ts  registry.ts  repo-personas.test.ts  runner.test.ts  runner.ts  runstate.test.ts  runstate.ts  session.test.ts  session.ts  spawn.test.ts  spawn.ts
extensions/web/: constants.ts  http.ts  index.ts  read.test.ts  read.ts  search.test.ts  search.ts
scripts/: reap.sh  spawn.sh
(+19 files in other folders)
